third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/table/nested-brackets-close.stderr
TOML parse error at line 1, column 4
  |
1 | [a]b]
  |    ^
invalid table header
expected newline, `#`
